# MicroSplit-Dapp

./: Anchor.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
programs/microsplit/: Cargo.toml
programs/microsplit/src/: lib.rs
src/: App.jsx  index.css
src/components/: FloatingOrbs.jsx  Navbar.jsx  ParticleBackground.jsx  WalletModal.jsx
src/contexts/: WalletContext.jsx
src/pages/: ConfirmationPage.jsx  CreateSplitPage.jsx  DashboardPage.jsx  LandingPage.jsx  PaymentGeneratedPage.jsx  PaymentPage.jsx
tests/: microsplit.ts
