[package]
name = "microsplit"
version = "0.1.0"
description = "MicroSplit — on-chain expense-splitting program built with Anchor on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "microsplit"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
